css/style.css
/* ... */
/* body {
  background-color: var(--black);
  color: #fff;
  cursor: none;
  background-image: url('../images/heronew.gif');
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  font-family: Clashdisplay, sans-serif;
  font-size: 22px;
  line-height: 28px;
} */
body {
  background-color: var(--black);
  color: #fff;
  cursor: none;
  background-image: 
      linear-gradient(to bottom, 
          transparent 0%, 
          transparent 30vh, 
          rgba(0, 0, 0, 0.1) 40vh, 
          rgba(0, 0, 0, 0.2) 50vh, 
          rgba(0, 0, 0, 0.4) 60vh, 
          rgba(0, 0, 0, 0.6) 70vh, 
          rgba(0, 0, 0, 0.8) 80vh, 
          rgba(0, 0, 0, 0.9) 90vh, 
          var(--black) 100vh
      ),
      url(../images/heronew.gif);
  background-position: center top;
  background-repeat: no-repeat;
  background-size: cover;
  font-family: Clashdisplay, sans-serif;
  background-attachment: fixed;
  font-size: 22px;
  line-height: 28px;
  min-height: 100vh;
}

h2 {
  margin-top: 20px;
  margin-bottom: 10px;
  font-size: 32px;
  font-weight: 600;
  line-height: 36px;
}

h4 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 30px;
  font-weight: 400;
  line-height: 28px;
}

p {
  margin-bottom: 0;
  line-height: 26px;
}

blockquote {
  border-left: 5px solid var(--default);
  margin-bottom: 10px;
  padding: 10px 20px;
  font-size: 18px;
  line-height: 22px;
}

.header {
  padding-top: 40px;
}

.menu-item {
  border-bottom: 2px solid var(--transparent);
  color: var(--white);
  text-transform: uppercase;
  margin-left: 15px;
  margin-right: 15px;
  padding: 10px 0;
  font-size: 17px;
  font-weight: 300;
}

.menu-item:hover {
  color: var(--default);
}

.menu-item.w--current {
  border-bottom-color: var(--default);
  color: var(--white);
  margin-left: 15px;
  margin-right: 15px;
  padding-right: 0;
}

.menu-item.w--current:hover {
  color: var(--default);
}

.logo-img {
  width: 200px;
}

.header-right-side {
  margin-left: auto;
  display: flex;
}

.cart-button {
  border: 1px solid var(--border-color);
  text-align: left;
  -webkit-text-stroke-color: #e8e7ef;
  background-color: #fff0;
  border-radius: 5px;
  justify-content: center;
  width: auto;
  height: auto;
  padding: 15px;
  position: relative;
}

.header-inner {
  background-color: transparent;
  /* border: 1px solid #292929; */
  border-radius: 5px;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0;
  padding: 5px;
  display: flex;
}

.logo.w--current {
  flex: none;
}

.main-menu {
  border: 2px #f9dc4a;
  border-radius: 0;
  flex: 0 auto;
  align-self: center;
  margin-left: auto;
  padding: 0;
}

.shop-link {
  color: #1d1d1d;
  text-decoration: underline;
}

.shop-button {
  color: #f8ff00;
  background-color: #000;
  align-self: flex-end;
  margin-top: auto;
  padding: 20px 30px;
  font-size: 18px;
  line-height: 20px;
}

.cart-quantity {
  color: var(--white);
  background-color: #fff0;
  min-width: auto;
  height: auto;
  padding: 0;
  font-size: 17px;
  font-weight: 400;
  line-height: 18px;
  position: static;
  inset: 0% 0% auto auto;
}

.main-container {
  max-width: 1400px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 10px;
  padding-right: 10px;
  font-size: 20px;
  font-weight: 300;
  line-height: 20px;
  background-image: 
  linear-gradient(to bottom, 
      transparent 0%, 
      transparent 30vh, 
      rgba(0, 0, 0, 0.1) 40vh, 
      rgba(0, 0, 0, 0.2) 50vh, 
      rgba(0, 0, 0, 0.4) 60vh, 
      rgba(0, 0, 0, 0.6) 70vh, 
      rgba(0, 0, 0, 0.8) 80vh, 
      rgba(0, 0, 0, 0.9) 90vh, 
      var(--black) 100vh
  ),
  url(../images/heronew.gif);
background-position: center top;
background-repeat: no-repeat;
background-size: cover;
background-attachment: fixed;

}

.cursor-wrapp {
  z-index: 9999;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  display: flex;
  position: fixed;
  inset: 0%;
}

.cursor {
  z-index: 9999;
  border: 1px solid var(--default);
  opacity: 0;
  -webkit-text-fill-color: inherit;
  cursor: none;
  mix-blend-mode: normal;
  background-color: #a9a9a980;
  background-clip: border-box;
  border-radius: 50%;
  justify-content: center;
  align-items: center;
  width: 70px;
  height: 70px;
  display: flex;
  position: absolute;
}

.project-cursor-text {
  opacity: 0;
  text-align: center;
  text-transform: uppercase;
}

.hero-section {
  padding-top: 20px;
  padding-bottom: 50px;
}

.hero-grid {
  grid-column-gap: 50px;
  grid-row-gap: 50px;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-columns: 1fr;
  padding-top: 150px;
  display: grid;
}

.hero-big-text {
  text-transform: uppercase;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 140px;
  line-height: 100px;
}

.hero-paragraph {
  margin-bottom: 0;
  font-weight: 300;
}

.hero-projects-link {
  color: var(--white);
  justify-content: flex-start;
  align-items: center;
  margin-top: 30px;
  text-decoration: none;
  display: flex;
}

.hero-projects-link-text {
  border-bottom: 1px solid var(--white);
  font-weight: 300;
  line-height: 22px;
  text-decoration: none;
}

.hero-proect-link-arrow {
  width: 20px;
  margin-left: 10px;
}

.hero-under-text {
  border-left: 5px solid var(--default);
  text-transform: uppercase;
  margin-top: 100px;
  padding-left: 30px;
  font-size: 30px;
  font-weight: 200;
  line-height: 40px;
}

.hero-partners {
  border-top: 1px solid var(--border-color);
  border-bottom: 1px solid var(--border-color);
  margin-top: 50px;
  padding-top: 15px;
  padding-bottom: 15px;
  overflow: hidden;
}

.hero-partners.partners-about {
  margin-top: 0;
}

.hero-partners-moving {
  white-space: nowrap;
  word-break: normal;
  overflow-wrap: normal;
}

.hero-client-logo {
  margin-right: 100px;
}

.numbers-grid {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-auto-columns: 1fr;
  display: grid;
}
/* ... */

